--- a/pgs/turma.html
+++ b/pgs/turma.html
@@ -14,7 +14,7 @@
     </div>
 
         <div class="imgs">
-            <div><img src="../img turma/turma1.jpg" alt=""></div>
+            <div><img src="../img turma/Turma1.jpg" alt=""></div>
             <div><img src="../img turma/turma2.jpg" alt=""></div>
         </div>
 
